appId: com.lsimaocosta.calculadorapricesac
---
- runFlow: helpers/launch_dev_client.yaml
- tapOn:
    id: 'tab-calculator'
- scrollUntilVisible:
    element:
      id: 'section-parameters'
    timeout: 8000
    speed: 80
    visibilityPercentage: 10
- assertVisible:
    id: 'section-parameters'
