appId: com.lsimaocosta.calculadorapricesac
---
- runFlow: helpers/launch_dev_client.yaml
- tapOn:
    id: tab-premium
- scrollUntilVisible:
    element:
      id: btn-dev-force-store-review
    direction: DOWN
    timeout: 30000
    speed: 60
    visibilityPercentage: 10
- assertVisible:
    id: btn-dev-force-store-review
