appId: com.lsimaocosta.calculadorapricesac
---
- runFlow: helpers/launch_dev_client.yaml
- runFlow: helpers/enable_premium_dev.yaml
- tapOn:
    id: 'tab-calculator'
- repeat:
    times: 8
    commands:
      - swipe:
          start: 50%, 20%
          end: 50%, 88%
- scrollUntilVisible:
    element:
      id: 'section-summary'
    centerElement: false
    timeout: 30000
    speed: 60
    visibilityPercentage: 10
    waitToSettleTimeoutMs: 1000
- assertVisible:
    id: 'section-summary'
